FIX: various optimisations on mobile for live pane
- uses scrollIntoView instead of custom code
- prevents scrollable list to lag behind rendering by removing relative where possible and using `-webkit-overflow-scrolling: touch;` and ` -webkit-transform: translateZ(0px);` on relative element
- displays loading bar on initial loading
- applies safari white screen fix only on intentional scroll and not when automatically filling pane
- delays onHoverMessage to improve perf when scrolling on desktop
- removes unexpected border radius

--- a/assets/stylesheets/common/chat-message-separator.scss
+++ b/assets/stylesheets/common/chat-message-separator.scss
@@ -4,6 +4,7 @@
   display: flex;
   font-size: var(--font-down-1);
   position: relative;
+  -webkit-transform: translateZ(0px);
 
   &.new-message {
     color: var(--danger-medium);
